Fix jinja errors

--- a/inspectors/templates/public/home.html
+++ b/inspectors/templates/public/home.html
@@ -7,7 +7,7 @@
   <h2>Miami-Dade County<br>Inspector Feedback</h2>
 
   <p class="lead">This is a pilot program that allows homeowners and contractors to give constructive feedback to Miami-Dade County inspectors.</p>
-  <p><a href="{{ url_for('public.about') }}" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+  <p><a href="{{ url_for('registration.about') }}" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div><!-- /.jumbotron -->
 
     <h3>We'd like to give you a way for you to give feedback when you go through your upcoming inspections.</h3>
