--- a/inspectors/templates/footer.html
+++ b/inspectors/templates/footer.html
@@ -6,7 +6,7 @@
 
     <ul class="footer-nav">
 
-      <li><a href="{{ url_for('public.about') }}">About</a></li>
+      <li><a href="{{ url_for('registration.about') }}">About</a></li>
 
       <li><a href="mailto:ehsiung@codeforamerica.org">Contact</a></li>
     </ul>
