--- a/inspectors/templates/public/home.html
+++ b/inspectors/templates/public/home.html
@@ -21,16 +21,16 @@
     <form id="registerForm" class="form form-register" method="POST" action="" role="form">
       {{ form.hidden_tag() }}
       <div class="form-group">
-        {{form.permit_id.label}}
-        {{form.permit_id(placeholder="examples: 2015000000, C2015000000", class_="form-control")}}
+        {{form.permit_number.label}}
+        {{form.permit_number(placeholder="examples: 2015000000, C2015000000", class_="form-control")}}
       </div>
       <div class="form-group">
         {{form.email.label}}
         {{form.email(placeholder="Email", class_="form-control")}}
       </div>
       <div class="form-group">
-        {{form.sms.label}}
-        {{form.sms(placeholder="305-555-5555", class_="form-control")}}
+        {{form.phone_number.label}}
+        {{form.phone_number(placeholder="example: 305-555-5555", class_="form-control")}}
       </div>
       <input type="submit" class="btn btn-primary" value="Sign me up!">
     </form>
